@@ -9,10 +9,11 @@ ARCHIVE=${PRODUCT}-${VERSION}.tar.gz
 rm -rf $TEMPDIR
 mkdir -p $TEMPDIR
 
-cp -R CHANGES LICENSE README *.php docs example $TEMPDIR
+cp -R CHANGES LICENSE README *.php docs example tests $TEMPDIR
 #TODO: Make this work for more recursion.
 rm -rf $TEMPDIR/docs/CVS
 rm -rf $TEMPDIR/example/CVS
+rm -rf $TEMPDIR/tests/CVS
 
 tar zcf $ARCHIVE $TEMPDIR
 
